--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -39,7 +39,7 @@
         margin-bottom: 1em;
     }
     .rounded-image {
-        display: inline;
+        display: inline-grid;
         margin: 0 auto;
         // margin-left: -25%; //centers the image
         height: 100%;
